# molecule-solubility-prediction

./: .gitignore  README.md  pyproject.toml
.claude/: claude.md  settings.local.json
DataUtils/: __init__.py  collate.py  datasets.py  graph_preprocessing.py  metrics.py  prepare_data.py  utils.py
Inference/: __init__.py  inference_chemberta.py  inference_gnn.py  inference_random_forest.py  inference_transformer.py
Models/: __init__.py  chemberta.py  dmpnn.py  layers.py  random_forest.py  transformer.py
Train/: __init__.py  calibrate_conformal.py  finetune_chemberta.py  finetune_transformer.py  pretrain_transformer.py  train_gnn.py  train_random_forest.py  validate_gnn.py  validate_random_forest.py  validate_transformer.py  wandb_utils.py
UQ/: __init__.py  conformal.py  evaluate.py
runpod_runner/: __init__.py  bootstrap.sh  pod_manager.py  train_on_runpod.py
tests/: test_conformal.py  test_runpod_pod_manager.py
