[project]
name = "molecule-solubility-prediction"
version = "0.1.0"
description = "ESOL Molecular Solubility Prediction with multiple model architectures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "rdkit>=2023.9.1",
    "transformers>=4.35",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "wandb>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DataUtils", "Models", "Train"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
